--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -109,13 +109,12 @@ stages:
   jobs: 
   - job: Deploy
     steps:
-    - task: DownloadPipelineArtifact@2  
+    - task: DownloadPipelineArtifact@2
       inputs:
-        buildType: specific
-        project: 6ec9f8cc-2944-4c87-b2e7-2978c1ca4968
-        definition: 4
-        runId: 20260104.1
+        buildType: 'specific'
+        project: '6ec9f8cc-2944-4c87-b2e7-2978c1ca4968'
+        definition: '4'
         buildVersionToDownload: 'specific'
+        pipelineId: '20260104.5'
         artifactName: 'todo-ui'
         targetPath: '$(System.DefaultWorkingDirectory)/artifacts'
-  
