Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -106,7 +106,7 @@ stages:
         artifact: 'todo-ui'
         publishLocation: 'pipeline'
 
-- stage: 
+- stage: DeploytoDevVM
   displayName: Deploy to Dev VM
   jobs: 
   - job: Deploy
